--- a/css/index.css
+++ b/css/index.css
@@ -16,3 +16,9 @@ body {
     font-family: verdana;
     font-size: 20px;
   }
+
+  footer{
+    color: whitesmoke;
+    font-family: verdana;
+    font-size: 20px; 
+  }
